<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:padding="10dp"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="24sp">
            <ai.wandz.example.ui.MainCardView
                android:id="@+id/adaptive_search_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardTitle="@string/adaptive_search"
                app:cardDescription="@string/adaptive_search_action"
                android:layout_marginBottom="24dp"
                app:cardImage="@drawable/adaptive_search_ic"/>

            <ai.wandz.example.ui.MainCardView
                android:id="@+id/interactions_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardTitle="@string/interactions"
                app:cardDescription="@string/interactions_action"
                android:layout_marginBottom="24dp"
                app:cardImage="@drawable/interactions_ic"/>

            <ai.wandz.example.ui.MainCardView
                android:id="@+id/sections_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardTitle="@string/sections"
                app:cardDescription="@string/sections_action"
                android:layout_marginBottom="24dp"
                app:cardImage="@drawable/screens_ic"/>

            <ai.wandz.example.ui.MainCardView
                android:id="@+id/events_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardTitle="@string/events"
                app:cardDescription="@string/events_action"
                android:layout_marginBottom="24dp"
                app:cardImage="@drawable/events_ic"/>

            <ai.wandz.example.ui.MainCardView
                android:id="@+id/affinities_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardTitle="@string/affinities"
                app:cardDescription="@string/affinities_action"
                android:layout_marginBottom="24dp"
                app:cardImage="@drawable/affinities_ic"/>

            <ai.wandz.example.ui.MainCardView
                android:id="@+id/data_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardTitle="@string/data"
                app:cardDescription="@string/data_action"
                android:layout_marginBottom="24dp"
                app:cardImage="@drawable/screens_ic"/>

        </LinearLayout>
    </ScrollView>
    <TextView
        android:id="@+id/wandz_ai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/lnk_color"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5sp"
        android:text="@string/wandz_ai"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10sp"
        android:text="@string/all_rights"/>
</LinearLayout>