<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AffinitiesActivity"
    android:orientation="vertical"
    android:paddingStart="32sp"
    android:paddingEnd="32sp"
    android:paddingTop="24sp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/affinities_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="200sp"
                android:background="@drawable/input_background"
                android:padding="16sp"
                android:textSize="16sp"
                android:text="@string/affinities_mock"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_scan"
                android:layout_gravity="center"
                android:layout_marginTop="16sp"
                android:text="@string/scan_for_affinities"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/affinities_reported"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingTop="16sp"/>
            <TextView
                android:id="@+id/affinities_report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:paddingTop="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_affinities_title"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/affinities_description"/>

            <include android:id="@+id/include_code_view"
                layout="@layout/code_view_card"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>