<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EventsActivity"
    android:orientation="vertical"
    android:paddingStart="32sp"
    android:paddingEnd="32sp"
    android:paddingTop="24sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:gravity="center"
            android:background="@drawable/input_background">
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/events_selector"
                android:spinnerMode="dropdown"
                />
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fire"
            android:id="@+id/btn_oob"
            android:layout_marginStart="16sp"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="18sp"
        android:paddingTop="8sp"
        android:paddingBottom="8sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:id="@+id/events_custom"
            android:hint="@string/custom_event_hint"
            android:maxLines="1"
            android:background="@drawable/input_background"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fire"
            android:id="@+id/btn_custom"
            android:layout_marginStart="16sp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_events_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingTop="16sp"
        android:paddingBottom="12sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/events_description"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:paddingTop="18sp"
        android:text="@string/reported_events"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reportedEvents"
            android:textSize="14sp"
            android:paddingTop="16sp"/>

    <include android:id="@+id/include_code_view"
        layout="@layout/code_view_card"/>
</LinearLayout>