<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AdaptiveSearchActivity"
    android:orientation="vertical"
    android:paddingStart="32sp"
    android:paddingEnd="32sp"
    android:paddingTop="24sp">

    <AutoCompleteTextView
        android:id="@+id/autocompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_hint"
        android:background="@drawable/input_background"
        android:padding="16sp"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_adaptive_search_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingTop="16sp"
        android:paddingBottom="12sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/adaptive_search_description" />

    <include android:id="@+id/include_code_view"
        layout="@layout/code_view_card"/>
</LinearLayout>