<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/splash_screen_view"
    android:background="@drawable/splash_bk">
    <ImageView
        android:id="@+id/splash_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/splash_logo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/splash_text"
        android:textAlignment="center"
        android:textSize="18sp"
        android:paddingTop="10sp"
        android:layout_below="@id/splash_logo"/>

    <TextView
        android:id="@+id/wandz_ai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/lnk_color"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50sp"
        android:text="@string/wandz_ai"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30sp"
        android:text="@string/all_rights"/>

</RelativeLayout>