<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DataActivity"
    android:orientation="vertical"
    android:paddingStart="32sp"
    android:paddingEnd="32sp"
    android:paddingTop="24sp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ai_features_title"
                android:textStyle="bold"
                android:textSize="18sp"
                android:paddingTop="12sp"/>
            <TextView
                android:id="@+id/tv_ai_features"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/predictions_title"
                android:textStyle="bold"
                android:textSize="18sp"
                android:paddingTop="12sp"/>
            <TextView
                android:id="@+id/tv_predictions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/audiences_title"
                android:textStyle="bold"
                android:textSize="18sp"
                android:paddingTop="12sp"/>
            <TextView
                android:id="@+id/tv_audiences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/affinities_title"
                android:textStyle="bold"
                android:textSize="18sp"
                android:paddingTop="12sp"/>
            <TextView
                android:id="@+id/tv_affinities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/events_title"
                android:textStyle="bold"
                android:textSize="18sp"
                android:paddingTop="12sp"/>
            <TextView
                android:id="@+id/tv_events"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adaptive_search"
                android:textStyle="bold"
                android:textSize="18sp"
                android:paddingTop="12sp"/>
            <TextView
                android:id="@+id/tv_adaptive_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>

    <include android:id="@+id/include_code_view"
        layout="@layout/code_view_card"/>
</LinearLayout>